package com.example.spellingnotify.core.util

object TestTags {

    const val SETTING_CUSTOM_OPTION = "setting custom option"
    const val SETTING_OPTION_DIALOG = "setting dialog"
    const val FILTER_SWITCH = "filter switch"
}