...
            Spacer(modifier = Modifier.height(60.dp))
            Row(
                verticalAlignment = Alignment.CenterVertically,
                modifier = Modifier.padding(horizontal = 22.dp, vertical = 12.dp)
            ) {
                Text(
                    text = "Ok",
                    fontSize = 20.sp,
                    color = MaterialTheme.colors.primary,
                    modifier = Modifier.clickable { onOk() }
                )
            }
        }
...
